# Flask-website

./: main.py  pyproject.toml
.upm/: store.json620028457
res/Quasar v1.4.1/: quasar.p12  settings.xml
res/Quasar v1.4.1/Clients/rober@WINDOWS_332F7B6/Logs/: 2023-04-23.html
res/Quasar v1.4.1/Profiles/: Default.xml
templates/: base.html  code.html  code_user.html  csharp.html  index.html  java.html  js.html  permission.html  python.html  scratch.html  style.css
